# deep-learning-playground

./: .gitignore  README.md  cnn.py  cnn_keras.py  computation_graph.ipynb  data_utils.py  fc_net.py  fc_net_keras.py  layers.py  linear_regression.py  logistic_regression.py  model.py  model_utils.py  solver.py  test.py  transfer_learning_keras.ipynb  transfer_learning_keras.py  xor_example.py
analysis/: analysis.py  cifar10_weights_analysis.ipynb
deep-rl/: environment_playground.py  test.py
experiments/: FPGA2018_test.ipynb  winograd_test.py
gan/: ali.py  cgan.py  cvrae.py  dcgan.py  gan_playground.ipynb  mnist_acgan.py  rcgan.py  rcgan_mnist.py  utils.py  vae.py  vae_gan.py  vrae.py
image_classification/: .gitignore
jax/: fusion.py  jax2torch.py  llama.py
keras/: cnn_cifar10.py  cnn_keras.py  ddpg.py  dqn_cartpole_keras.py  extract_feature_cifar10_cnn.py  fc_net_keras.py  max_approximator.py  transfer_learning_keras.py
keras_playground/: cnn_keras.py  fc_net_keras.py  transfer_learning_keras.ipynb  transfer_learning_keras.py
pytorch/: ANIML.ipynb  actor_critic.py  aot_compile.py  autograd_tutorial.ipynb  cartpole_v0.py  ddp_demo.py  ddpg.py  deepspeed_compile.py  dynamic_threads.py  gemma.py  gqa_order.py  meta.ipynb  meta.py  mixtral_optimized.py  neural_networks_tutorial.py  reinforce.py  replay_buffer.py  tensor_tutorial.ipynb  transformer_dynamo.py  transformer_playground.py
tensorflow/: VAE.ipynb  cnn.py  computation_graph.ipynb  fc_net.py  linear_regression.py  (+3 more)
torchinductor_playground/custom_cuda_op/: CMakeLists.txt  custom_op.cu  setup.py
(+39 files in other folders)
